<resources>
    <string name="app_name">My Application</string>

    <string name="Username">Nom d\'utilisateur</string>
    <string name="Password">Mot de passe</string>
    <string name="RememberMe">Se souvenir de moi</string>
    <string name="Login">Login</string>
    <string name="Register">Inscription</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">Prénom</string>
    <string name="LastName">Nom</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirmer l\'adresse email</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Page d\'inscription</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ciel couvert</string>
    <string name="nav_header_subtitle">EKS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Produits</string>
    <string name="menu_slideshow">Liste produits</string>
    <string name="menu_vente">to sell</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_commande">Commande</string>

</resources>